# edi

./: .arcconfig  .gitignore  .gitmodules  AUTHORS  CNAME  COPYING  COPYING.LGPL  ChangeLog  INSTALL  Makefile.am  Makefile_Eolian_Helper.am  NEWS  README  README.md  TODO  _config.yml  configure.ac  description  index.html  meson.build  meson_options.txt  params.json
_layouts/: default.html  post.html
_posts/: 2015-03-18-edi-packaged-in-bodhi.md  2015-06-02-new-editor-in-0.0.9-release.md  2015-08-30-EDI-0.1-released.md  2016-08-23-0-4-release.md  2017-04-28-release.md  2017-09-27-0.6-release.md  2018-05-15-0.6.1-released.md  2018-09-14-0.7.0-release.md  2020-04-29-0.8.0-release.md
data/: Makefile.am  meson.build
data/desktop/: Makefile.am  edi.desktop.in  meson.build
data/extra/: Makefile.am
data/extra/examples/: examples.edc  meson.build
data/extra/skeleton/: Makefile.am  eflproject.edc  eflproject_python.edc  meson.build
data/extra/skeleton/eflproject/: .gitignore  AUTHORS  COPYING  Makefile.am  configure.ac
data/extra/skeleton/eflproject/data/desktop/: ${edi_name}.desktop.in  Makefile.am
data/extra/skeleton/eflproject/data/themes/default/: Makefile.am  default.edc
data/extra/skeleton/eflproject/doc/: ${edi_name}.1.in
data/extra/skeleton/eflproject/m4/: efl_tests.m4
data/extra/skeleton/eflproject/packaging/: Makefile.am
data/extra/skeleton/eflproject/packaging/pkgbuild/: PKGBUILD
data/extra/skeleton/eflproject/packaging/slackware/: ${edi_name}.SlackBuild  Makefile.am  doinst.sh  slack-desc  slack-required
data/extra/skeleton/eflproject/src/lib/: ${EDI_NAME}.h  ${Edi_Name}.h  ${edi_name}.c  Makefile.am
data/extra/skeleton/eflproject/src/tests/: Makefile.am  test_${edi_name}.c
data/extra/skeleton/eflproject_python/: COPYING  setup.py
data/extra/skeleton/eflproject_python/src/: main.py
data/extra/templates/: Makefile.am  eflproject.edc  eflproject_python.edc  meson.build  templates.edc
data/extra/templates/skeletons/eflproject/: AUTHORS  COPYING  Makefile_Edje_Helper.am  autogen.sh  meson.build
data/extra/templates/skeletons/eflproject/data/: Makefile.am
data/extra/templates/skeletons/eflproject/data/desktop/: ${edi_name}.desktop  ${edi_name}.desktop.in  Makefile.am  meson.build
data/extra/templates/skeletons/eflproject/data/themes/default/: meson.build
data/extra/templates/skeletons/eflproject/doc/: Makefile.am
data/extra/templates/skeletons/eflproject/m4/: efl.m4
data/extra/templates/skeletons/eflproject/po/: Makevars  POTFILES.in  meson.build
data/extra/templates/skeletons/eflproject/src/: meson.build
data/extra/templates/skeletons/eflproject/src/lib/: ${edi_name}_private.h  Makefile.am
data/extra/templates/skeletons/eflproject_python/: setup.py
data/extra/templates/skeletons/eflproject_python/data/desktop/: ${edi_name}.desktop
data/icons/: meson.build
data/images/: Makefile.am  meson.build
data/themes/: black.edc  meson.build  solarized.edc  solarized_dark.edc  white.edc
doc/: Makefile.am  edi.1.in  meson.build
elm_code/src/lib/widget/: elm_code_widget.c  elm_code_widget.eo
news/: index.html
packaging/: Makefile.am
packaging/pkgbuild/: Makefile.am  PKGBUILD
pc/: edi.pc  edi.pc.in
po/: POTFILES.in  edi.pot  meson.build
scripts/: clang_build_include_dir.sh  clang_include_dir.sh  world_read.sh
src/: meson.build
src/lib/: .edi_mime.c.swp  Edi.h  Makefile.am  edi.c  edi_build_provider.c  edi_build_provider.h  edi_build_provider_cargo.c  edi_build_provider_cmake.c  edi_build_provider_go.c  edi_build_provider_make.c  edi_build_provider_meson.c  edi_build_provider_python.c  edi_builder.c  edi_builder.h  edi_create.c  edi_create.h  edi_exe.c  edi_exe.h  edi_mime.c  edi_mime.h  edi_path.c  edi_path.h  edi_private.h  edi_process.c  edi_process.h  edi_scm.c  edi_scm.h  meson.build
src/tests/: Makefile.am  edi_suite.c  edi_suite.h  edi_test_console.c  edi_test_content_provider.c  edi_test_create.c  edi_test_editor_suggest_provider.c  edi_test_editor_suggest_provider_c.c  edi_test_exe.c  edi_test_language_provider.c  edi_test_language_provider_c.c  edi_test_path.c  meson.build  test.c  test_edi.c
stylesheets/: stylesheet.css
