
install_data(['document-new.png', 'window-close.png', 'window-close.png',
              'document-save.png', 'edit-undo.png', 'edit-redo.png',
              'edit-cut.png', 'edit-copy.png', 'edit-paste.png',
              'edit-find-replace.png', 'go-jump.png', 'system-run.png',
              'media-record.png', 'media-playback-start.png', 'media-playback-stop.png',
              'utilities-terminal.png', 'help-about.png', 'preferences-desktop.png',
              'go-up.png', 'go-down.png'
             ],
             install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'edi', 'icons')
)
